# DesignPattern-CPP

./: CMakeLists.txt  README.md  doxygen.config
src/: CMakeLists.txt
src/abstract_factory/: CMakeLists.txt  cheese.h  cheese_pizza.cc  cheese_pizza.h  chicago_pizza_ingredient_factory.cc  chicago_pizza_ingredient_factory.h  chicago_pizza_store.cc  chicago_pizza_store.h  clam_pizza.cc  clam_pizza.h  clams.h  dough.h  fresh_clams.cc  fresh_clams.h  frozen_clams.cc  frozen_clams.h  marinara_sauce.cc  marinara_sauce.h  mozzarella_cheese.cc  mozzarella_cheese.h  ny_pizza_ingredient_factory.cc  ny_pizza_ingredient_factory.h  ny_pizza_store.cc  ny_pizza_store.h  pizza.cc  pizza.h  pizza_ingredient_factory.h  pizza_store.cc  pizza_store.h  plum_tomato_sauce.cc  plum_tomato_sauce.h  reggiano_cheese.cc  reggiano_cheese.h  sauce.h  thick_crust_dough.cc  thick_crust_dough.h  thin_crust_dough.cc  thin_crust_dough.h
src/abstract_factory/test/: abstract_method_pizza_test.cc
src/adapter/: CMakeLists.txt  duck.h  duck_adapter.cc  duck_adapter.h  mallard_duck.cc  mallard_duck.h  turkey.h  turkey_adapter.cc  turkey_adapter.h  wild_turkey.cc  wild_turkey.h
src/adapter/test/: duck_adapter_test.cc  turkey_adapter_test.cc
src/base/: macros.h
src/bridge/: CMakeLists.txt  circle_shape.cc  circle_shape.h  drawing.h  drawing_clockwise.h  drawing_counter_clockwise.h  shape.h
src/bridge/test/: bridge_circle_shape_test.cc
src/builder/: CMakeLists.txt  cheese_pizza_builder.h  clam_pizza_builder.h  pizza.h  pizza_builder.h  waiter.cc  waiter.h
src/builder/test/: builder_pizza_test.cc
src/chain_of_responsibility/: CMakeLists.txt  director.cc  director.h  manager.cc  manager.h  request.h  request.h~  staff.h  teacher.cc  teacher.h
src/chain_of_responsibility/test/: staff_responsibility_test.cc
src/command/: CMakeLists.txt  ceiling_fan.cc  ceiling_fan.h  ceiling_fan_high_command.cc  ceiling_fan_high_command.h  ceiling_fan_low_command.cc  ceiling_fan_low_command.h  ceiling_fan_medium_command.cc  ceiling_fan_medium_command.h  ceiling_fan_off_command.cc  ceiling_fan_off_command.h  command.h  dimmer_light_off_command.cc  dimmer_light_off_command.h  dimmer_light_on_command.cc  dimmer_light_on_command.h  light.cc  light.h  light_off_command.cc  light_off_command.h  light_on_command.cc  light_on_command.h  no_command.h  remote_control.cc  remote_control.h
src/command/test/: remote_control_test.cc
src/composite/: CMakeLists.txt  composite_iterator.cc  composite_iterator.h  iterator.h  menu.cc  menu.h  menu_component.h  menu_item.cc  menu_item.h  menu_iterator.cc  menu_iterator.h  null_iterator.h  waitress.cc  waitress.h
src/decorator/: CMakeLists.txt  beverage.cc  beverage.h  condiment_decorator.h  darkroast.cc  darkroast.h  decaf.cc  decaf.h  espresso.cc  espresso.h  house_blend.cc  house_blend.h  milk.cc  milk.h  mocha.cc  mocha.h  soy.cc  soy.h  whip.cc  whip.h
src/facade/: CMakeLists.txt  amplifier.cc  amplifier.h  cd_player.cc  cd_player.h  dvd_player.cc  dvd_player.h  home_theater_facade.cc  home_theater_facade.h  popcorn_popper.cc  popcorn_popper.h  projector.cc  projector.h  screen.cc  screen.h  theater_lights.cc  theater_lights.h  tuner.cc  tuner.h
src/factory_method/: CMakeLists.txt  cheese_pizza.cc  cheese_pizza.h  clam_pizza.cc  clam_pizza.h  pepperoni_pizza.cc  pepperoni_pizza.h  pizza.cc  pizza.h  pizza_store.cc  pizza_store.h  simple_pizza_factory.cc  simple_pizza_factory.h  veggie_pizza.cc  veggie_pizza.h
src/flyweight/: CMakeLists.txt  circle.cc  circle.h  shape.h  shape_factory.cc  shape_factory.h
src/interpreter/: CMakeLists.txt  add_expression.cc  add_expression.h  expression.h  null_expression.h  number_expression.cc  number_expression.h  subtract_expression.cc  subtract_expression.h  token_reader.cc  token_reader.h
src/iterator/: CMakeLists.txt  diner_menu.cc  diner_menu.h  diner_menu_iterator.cc  diner_menu_iterator.h  iterator.h  menu.h  menu_item.cc  menu_item.h  pancake_house_menu.cc  pancake_house_menu.h  pancake_house_menu_iterator.cc  pancake_house_menu_iterator.h  waitress.cc  waitress.h
src/mediator/: CMakeLists.txt  colleague.h  colleague_event.h  employee.h  general_staff.cc  general_staff.h  manager.cc  manager.h  mediator.h  sales_men.h  staff_msg.h  sys_admin.cc  sys_admin.h
src/memento/: CMakeLists.txt  caretaker.h  memento.h  originator.h
src/observer/: CMakeLists.txt  current_conditions_display.cc  current_conditions_display.h  display_element.h  forecast_display.cc  forecast_display.h  heatindex_display.cc  heatindex_display.h  observer.h  statistics_display.cc  statistics_display.h  subject.h  weather_data.cc  weather_data.h
src/prototype/: CMakeLists.txt  configuration.cc  configuration.h  prototype.h  prototype_manager.cc  prototype_manager.h  user_profile.cc  user_profile.h
src/proxy/: CMakeLists.txt  bear.h  drinker.h  proxy_bear.cc  proxy_bear.h  wine.h
src/singleton/: CMakeLists.txt  mutex.h  singleton.cc  singleton.h
src/state/: CMakeLists.txt  gumball_machine.cc  gumball_machine.h  has_quarter_state.cc  has_quarter_state.h  no_quarter_state.cc  no_quarter_state.h  sold_out_state.cc  sold_out_state.h  sold_state.cc  sold_state.h  state.h
src/strategy/: CMakeLists.txt  decoy_duck.cc  decoy_duck.h  duck.cc  duck.h  fly_behavior.h  fly_noway.cc  fly_noway.h  fly_rocketpowerd.cc  fly_rocketpowered.h  fly_with_wings.cc  fly_with_wings.h  mallard_duck.cc  mallard_duck.h  model_duck.cc  model_duck.h  mute_quack.cc  mute_quack.h  quack.cc  quack.h  quack_behavior.h  rubber_duck.cc  rubber_duck.h  squeak.cc  squeak.h
src/templatemethod/: CMakeLists.txt  caffeine_beverage.cc  caffeine_beverage.h  caffeine_beverage_with_hook.cc  caffeine_beverage_with_hook.h  coffee.cc  coffee.h  coffee_with_hook.cc  coffee_with_hook.h  tea.cc  tea.h  tea_with_hook.cc  tea_with_hook.h
src/visitor/: CMakeLists.txt  body.cc  body.h  car.cc  car.h  car_element.h  car_element_do_visitor.cc  car_element_do_visitor.h  car_element_print_visitor.cc  car_element_print_visitor.h  car_element_visitor.h  engine.cc  engine.h  wheel.cc  wheel.h
(+56 files in other folders)
